--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "homepage": "https://github.com/Rujaxx/kalpasAssignmnet#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "fast-csv": "^4.3.6",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12"
   },
   "devDependencies": {
